Task5/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-backend
spec:
  podSelector:
    matchLabels:
      app: front-end
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: back-end-api
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: back-end-api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-frontend
spec:
  podSelector:
    matchLabels:
      app: back-end-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-backend
spec:
  podSelector:
    matchLabels:
      app: admin-front-end
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-back-end-api
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: admin-back-end-api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-frontend
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: admin-front-end
